--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@react-spring/web": "^9.7.5",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "framer-motion": "^12.5.0",
     "install": "^0.13.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -20,6 +23,7 @@
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
